# evm-indexer

./: .gitignore  Cargo.toml  diesel.toml
migrations/2025-07-24-135313_create_blocks/: up.sql
src/: config.rs  db.rs  lib.rs  main.rs  rpc.rs  schema.rs  utils.rs
src/models/: block.rs
src/utils/: format.rs
